--- a/kgmaker/src/main/resources/templates/kg/home.html
+++ b/kgmaker/src/main/resources/templates/kg/home.html
@@ -133,12 +133,12 @@ left: 812px !important;
           </a>
           <el-button v-if="pageModel.pageIndex<pageModel.totalPage" type="info"style="margin: 2px 0 4px 2px;" plain size="small" @click="getmoredomain">加载更多</el-button>
         </div>
-        <div id="follow-us" class="guanzhu" style="padding: 20px;">
-		      <h2 class="hometitle">交流</h2>
-		      <ul>
-		       	<li class="wx"><img src="http://file.miaoleyan.com/nndt/8UQmv0M1CWLxFx45YSuUElouufhePenr"></li>
-		      </ul>
-		    </div>
+        <!--<div id="follow-us" class="guanzhu" style="padding: 20px;">-->
+		      <!--<h2 class="hometitle">交流</h2>-->
+		      <!--<ul>-->
+		       	<!--<li class="wx"><img src="http://file.miaoleyan.com/nndt/8UQmv0M1CWLxFx45YSuUElouufhePenr"></li>-->
+		      <!--</ul>-->
+		    <!--</div>-->
       </div>
     </el-scrollbar>
     <!-- 左侧over -->
@@ -205,25 +205,25 @@ left: 812px !important;
              <span class="node_pd" v-for="(m,k) in nodedetail">{{k}}:{{m}}</span>
         </div>
 
-        <div v-show="tipsshow" id="operatetips" class="operatetips">
-			<span style="color:red;position:absolute;top:6px;left:10px;cursor:pointer;" @click="btntipsclose">x</span>
-			<span style="color: #EE4000; ">至前端小哥哥小姐姐：如果你们只是参考d3.js创建图谱的力导向图，打开源码后找到</span>
-			<span style="color: #EE4000; ">/kgmaker/src/main/resources</span>
-			<span style="color: #EE4000; ">/templates/kg</span>
-			<span style="color: #EE4000; ">/demoforfont-end.html,这是一个静态页</span>
-			<div style="color: #EE4000; width: 100%"><a style="color:orange;" href="https://github.com/MiracleTanC/Neo4j">Github源码</a></div>
-			<h3>tips</h3>
-			<ul>
-				<li>1.选中节点或者节点名称，双击修改名称</li>
-				<li>2.连线选择之后，再点击其他节点，完成节点间的连线</li>
-				<li>3.鼠标滑到连线上，连线变粗，双击修改连线名称，若已有名称，则可根据提示修改</li>
-				<li>4.批量添加，没有添加节点文字控制（如有需要可自己定制）</li>
-				<li>5.追加意为在该节点下添加下级节点，并添加默认连线</li>
-				<li>6.展开意为查询与该节点有直接关系的节点，（如有需要可定制自己的cypher语句）</li>
-				<li>7.导入csv,需保证csv编码为utf-8,代码中使用远程导入，可使用服务器importdata(可查看相关博文)</li>
-				<li>8.为节点添加富文本或者图片后，在节点上停留2秒可以查看内容</li>
-			</ul>
-        </div>
+        <!--<div v-show="tipsshow" id="operatetips" class="operatetips">-->
+			<!--<span style="color:red;position:absolute;top:6px;left:10px;cursor:pointer;" @click="btntipsclose">x</span>-->
+			<!--<span style="color: #EE4000; ">至前端小哥哥小姐姐：如果你们只是参考d3.js创建图谱的力导向图，打开源码后找到</span>-->
+			<!--<span style="color: #EE4000; ">/kgmaker/src/main/resources</span>-->
+			<!--<span style="color: #EE4000; ">/templates/kg</span>-->
+			<!--<span style="color: #EE4000; ">/demoforfont-end.html,这是一个静态页</span>-->
+			<!--<div style="color: #EE4000; width: 100%"><a style="color:orange;" href="https://github.com/MiracleTanC/Neo4j">Github源码</a></div>-->
+			<!--<h3>tips</h3>-->
+			<!--<ul>-->
+				<!--<li>1.选中节点或者节点名称，双击修改名称</li>-->
+				<!--<li>2.连线选择之后，再点击其他节点，完成节点间的连线</li>-->
+				<!--<li>3.鼠标滑到连线上，连线变粗，双击修改连线名称，若已有名称，则可根据提示修改</li>-->
+				<!--<li>4.批量添加，没有添加节点文字控制（如有需要可自己定制）</li>-->
+				<!--<li>5.追加意为在该节点下添加下级节点，并添加默认连线</li>-->
+				<!--<li>6.展开意为查询与该节点有直接关系的节点，（如有需要可定制自己的cypher语句）</li>-->
+				<!--<li>7.导入csv,需保证csv编码为utf-8,代码中使用远程导入，可使用服务器importdata(可查看相关博文)</li>-->
+				<!--<li>8.为节点添加富文本或者图片后，在节点上停留2秒可以查看内容</li>-->
+			<!--</ul>-->
+        <!--</div>-->
 		  <el-scrollbar v-show="jsonshow" id="jsoncontainer"  class="jsoncontainer">
 			  <pre id="json-renderer"></pre>
 		  </el-scrollbar>
